// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Card Default Full Button type 1`] = `
.c4 {
  display: inline-block;
  vertical-align: middle;
  padding: 0.25rem 0.75rem;
  border-radius: 0.75rem;
  font-size: 0.725rem;
  background-color: #00C3FF;
  color: #ffffff;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  width: 60px;
  text-align: right;
}

.c5 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c6 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c7 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c7:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c9 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c9:hover {
  background-color: #D8E3F6;
}

.c8 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #456297;
}

.c8:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
    <div
      className="c3 c2"
    >
      <span
        className="vital__badge vital__card-header-badge c4"
      >
        99+
      </span>
    </div>
  </div>
  <div
    className="vital__card-content c5"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c6"
  >
    <div
      className="vital__card-footer-button-wapper c7"
    >
      <button
        className="vital__card-footer-button c8"
      >
        Cancel
      </button>
    </div>
    <div
      className="vital__card-footer-button-wapper c7"
    >
      <button
        className="vital__card-footer-button c9"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Card Hero Image 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c1 {
  min-height: 183px;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: #dddddd;
  background-size: cover;
  border-bottom: 1px solid #D8E3F6;
  color: #ffffff;
  background-image: url(test-file-stub);
}

.c1 > .c3 {
  position: absolute;
  bottom: 0;
  text-shadow: 0 2px 6px rgba(0,0,0,0.5);
  font-size: 1.424rem;
  font-weight: normal;
  margin-top: 1.424em;
  margin-bottom: 1.424em;
}

.c4 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c5 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c6:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c8 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c8:hover {
  background-color: #D8E3F6;
}

.c7 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #456297;
}

.c7:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 400px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="400px"
  width="300px"
>
  <div
    className="vital__card-header c1 c2"
  >
    <div
      className="vital__card-header-title c3 "
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c4"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c5"
  >
    <div
      className="vital__card-footer-button-wapper c6"
    >
      <button
        className="vital__card-footer-button c7"
      >
        Cancel
      </button>
    </div>
    <div
      className="vital__card-footer-button-wapper c6"
    >
      <button
        className="vital__card-footer-button c8"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Card With Flat Button 1`] = `
.c5 > button:not(:last-child) {
  margin-right: 5px;
}

.c5 > button {
  display: inline-block;
}

.c6 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background: #D8E3F6;
}

.c6:active {
  background: #C4D2EB;
}

.c6[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  position: relative;
  background: #F7F9FE;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #0E86FE;
  color: #ffffff;
  border-color: #0E86FE;
}

.c7:hover {
  background: #D8E3F6;
}

.c7:active {
  background: #C4D2EB;
}

.c7:hover {
  background: #41a0fe;
  border-color: #41a0fe;
}

.c7:active {
  background: #0167ce;
  border-color: #0167ce;
}

.c7[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c4 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c3"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c4"
  >
    <div
      className="c5"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <button
        className="vital__button c6"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Cancel
      </button>
      <button
        className="vital__button c7"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Card With Icon 1`] = `
.c1 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c2 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c3 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c3:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c4 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c4:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: auto;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="auto"
  width="300px"
>
  <div
    className="vital__card-content c1"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <svg
      className=""
      height="90"
      onClick={[Function]}
      viewBox="0 0 914.2857142857142 1024"
      width="90"
    >
      <path
        d="M146.286 768c0-20-16.571-36.571-36.571-36.571-20.571 0-36.571 16.571-36.571 36.571 0 20.571 16 36.571 36.571 36.571 20 0 36.571-16 36.571-36.571zM237.714 475.429v365.714c0 20-16.571 36.571-36.571 36.571h-164.571c-20 0-36.571-16.571-36.571-36.571v-365.714c0-20 16.571-36.571 36.571-36.571h164.571c20 0 36.571 16.571 36.571 36.571zM914.286 475.429c0 30.286-12 62.857-31.429 85.143 6.286 18.286 8.571 35.429 8.571 43.429 1.143 28.571-7.429 55.429-24.571 78.286 6.286 21.143 6.286 44 0 66.857-5.714 21.143-16.571 40-30.857 53.714 3.429 42.857-6.286 77.714-28 103.429-24.571 29.143-62.286 44-112.571 44.571h-73.714c-81.714 0-158.857-26.857-220.571-48-36-12.571-70.286-24.571-90.286-25.143-19.429-0.571-36.571-16.571-36.571-36.571v-366.286c0-18.857 16-34.857 34.857-36.571 21.143-1.714 76-69.714 101.143-102.857 20.571-26.286 40-50.857 57.714-68.571 22.286-22.286 28.571-56.571 35.429-89.714 6.286-33.714 13.143-69.143 37.714-93.143 6.857-6.857 16-10.857 25.714-10.857 128 0 128 102.286 128 146.286 0 46.857-16.571 80-32 109.714-6.286 12.571-12 18.286-16.571 36.571h158.286c59.429 0 109.714 50.286 109.714 109.714z"
        fill="#0e86fe"
      />
    </svg>
    <div
      style={
        Object {
          "color": "#456297",
          "fontSize": "1.25rem",
          "lineHeight": "1.5rem",
          "overflow": "hidden",
          "paddingTop": "1.25rem",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
          "width": "100%",
        }
      }
    >
      Congrats
    </div>
    <div
      style={
        Object {
          "fontSize": "0.93333rem",
          "lineHeight": "1.25rem",
          "paddingTop": "10px",
        }
      }
    >
      Let’s Get Started
    </div>
  </div>
  <div
    className="vital__card-footer c2"
  >
    <div
      className="vital__card-footer-button-wapper c3"
    >
      <button
        className="vital__card-footer-button c4"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components | Card With Link Button 1`] = `
.c5 > button:not(:last-child) {
  margin-right: 5px;
}

.c5 > button {
  display: inline-block;
}

.c6 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c6:hover {
  background: #D8E3F6;
}

.c6:active {
  background: #C4D2EB;
}

.c6:hover {
  background: transparent;
  color: #41a0fe;
}

.c6[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  position: relative;
  background: #F7F9FE;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c7:hover {
  background: #D8E3F6;
}

.c7:active {
  background: #C4D2EB;
}

.c7:hover {
  background: transparent;
  color: #41a0fe;
}

.c7[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c4 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c3"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c4"
  >
    <div
      className="c5"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <button
        className="vital__button c6"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Cancel
      </button>
      <button
        className="vital__button c7"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card Default Full Button type 1`] = `
.c4 {
  display: inline-block;
  vertical-align: middle;
  padding: 0.25rem 0.75rem;
  border-radius: 0.75rem;
  font-size: 0.725rem;
  background-color: #00C3FF;
  color: #ffffff;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  width: 60px;
  text-align: right;
}

.c5 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c6 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c7 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c7:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c9 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c9:hover {
  background-color: #D8E3F6;
}

.c8 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #456297;
}

.c8:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
    <div
      className="c3 c2"
    >
      <span
        className="vital__badge vital__card-header-badge c4"
      >
        99+
      </span>
    </div>
  </div>
  <div
    className="vital__card-content c5"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c6"
  >
    <div
      className="vital__card-footer-button-wapper c7"
    >
      <button
        className="vital__card-footer-button c8"
      >
        Cancel
      </button>
    </div>
    <div
      className="vital__card-footer-button-wapper c7"
    >
      <button
        className="vital__card-footer-button c9"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card Hero Image 1`] = `
.c2 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c1 {
  min-height: 183px;
  background-position: center center;
  background-repeat: no-repeat;
  background-color: #dddddd;
  background-size: cover;
  border-bottom: 1px solid #D8E3F6;
  color: #ffffff;
  background-image: url(test-file-stub);
}

.c1 > .c3 {
  position: absolute;
  bottom: 0;
  text-shadow: 0 2px 6px rgba(0,0,0,0.5);
  font-size: 1.424rem;
  font-weight: normal;
  margin-top: 1.424em;
  margin-bottom: 1.424em;
}

.c4 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c5 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c6:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c8 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c8:hover {
  background-color: #D8E3F6;
}

.c7 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #456297;
}

.c7:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 400px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="400px"
  width="300px"
>
  <div
    className="vital__card-header c1 c2"
  >
    <div
      className="vital__card-header-title c3 "
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c4"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c5"
  >
    <div
      className="vital__card-footer-button-wapper c6"
    >
      <button
        className="vital__card-footer-button c7"
      >
        Cancel
      </button>
    </div>
    <div
      className="vital__card-footer-button-wapper c6"
    >
      <button
        className="vital__card-footer-button c8"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card With Flat Button 1`] = `
.c5 > button:not(:last-child) {
  margin-right: 5px;
}

.c5 > button {
  display: inline-block;
}

.c6 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background: #D8E3F6;
}

.c6:active {
  background: #C4D2EB;
}

.c6[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  position: relative;
  background: #F7F9FE;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #0E86FE;
  color: #ffffff;
  border-color: #0E86FE;
}

.c7:hover {
  background: #D8E3F6;
}

.c7:active {
  background: #C4D2EB;
}

.c7:hover {
  background: #41a0fe;
  border-color: #41a0fe;
}

.c7:active {
  background: #0167ce;
  border-color: #0167ce;
}

.c7[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c4 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c3"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c4"
  >
    <div
      className="c5"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <button
        className="vital__button c6"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Cancel
      </button>
      <button
        className="vital__button c7"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card With Icon 1`] = `
.c1 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c2 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c3 {
  position: relative;
  height: 50px;
  display: table-cell;
  vertical-align: middle;
}

.c3:not(:last-child):after {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  width: 1px;
  height: 100%;
  background: #D8E3F6;
}

.c4 {
  padding: 0 10px;
  margin: 0;
  border: 0;
  border-radius: 0;
  height: 100%;
  width: 100%;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  line-height: 50px;
  box-sizing: border-box;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  color: #0E86FE;
}

.c4:hover {
  background-color: #D8E3F6;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: auto;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="auto"
  width="300px"
>
  <div
    className="vital__card-content c1"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <svg
      className=""
      height="90"
      onClick={[Function]}
      viewBox="0 0 914.2857142857142 1024"
      width="90"
    >
      <path
        d="M146.286 768c0-20-16.571-36.571-36.571-36.571-20.571 0-36.571 16.571-36.571 36.571 0 20.571 16 36.571 36.571 36.571 20 0 36.571-16 36.571-36.571zM237.714 475.429v365.714c0 20-16.571 36.571-36.571 36.571h-164.571c-20 0-36.571-16.571-36.571-36.571v-365.714c0-20 16.571-36.571 36.571-36.571h164.571c20 0 36.571 16.571 36.571 36.571zM914.286 475.429c0 30.286-12 62.857-31.429 85.143 6.286 18.286 8.571 35.429 8.571 43.429 1.143 28.571-7.429 55.429-24.571 78.286 6.286 21.143 6.286 44 0 66.857-5.714 21.143-16.571 40-30.857 53.714 3.429 42.857-6.286 77.714-28 103.429-24.571 29.143-62.286 44-112.571 44.571h-73.714c-81.714 0-158.857-26.857-220.571-48-36-12.571-70.286-24.571-90.286-25.143-19.429-0.571-36.571-16.571-36.571-36.571v-366.286c0-18.857 16-34.857 34.857-36.571 21.143-1.714 76-69.714 101.143-102.857 20.571-26.286 40-50.857 57.714-68.571 22.286-22.286 28.571-56.571 35.429-89.714 6.286-33.714 13.143-69.143 37.714-93.143 6.857-6.857 16-10.857 25.714-10.857 128 0 128 102.286 128 146.286 0 46.857-16.571 80-32 109.714-6.286 12.571-12 18.286-16.571 36.571h158.286c59.429 0 109.714 50.286 109.714 109.714z"
        fill="#0e86fe"
      />
    </svg>
    <div
      style={
        Object {
          "color": "#456297",
          "fontSize": "1.25rem",
          "lineHeight": "1.5rem",
          "overflow": "hidden",
          "paddingTop": "1.25rem",
          "textOverflow": "ellipsis",
          "whiteSpace": "nowrap",
          "width": "100%",
        }
      }
    >
      Congrats
    </div>
    <div
      style={
        Object {
          "fontSize": "0.93333rem",
          "lineHeight": "1.25rem",
          "paddingTop": "10px",
        }
      }
    >
      Let’s Get Started
    </div>
  </div>
  <div
    className="vital__card-footer c2"
  >
    <div
      className="vital__card-footer-button-wapper c3"
    >
      <button
        className="vital__card-footer-button c4"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Card With Link Button 1`] = `
.c5 > button:not(:last-child) {
  margin-right: 5px;
}

.c5 > button {
  display: inline-block;
}

.c6 {
  position: relative;
  background: #F7F9FE;
  color: #456297;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c6:hover {
  background: #D8E3F6;
}

.c6:active {
  background: #C4D2EB;
}

.c6:hover {
  background: transparent;
  color: #41a0fe;
}

.c6[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c7 {
  position: relative;
  background: #F7F9FE;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E3F6;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: transparent;
  color: #0E86FE;
  border: 1px solid transparent;
}

.c7:hover {
  background: #D8E3F6;
}

.c7:active {
  background: #C4D2EB;
}

.c7:hover {
  background: transparent;
  color: #41a0fe;
}

.c7[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FE;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  padding: 0.75rem 1.25rem;
  border-bottom: 1px solid #D8E3F6;
  color: #456297;
  font-size: 1.25rem;
  min-height: 50px;
  display: table;
  width: 100%;
}

.c2 {
  display: table-cell;
  vertical-align: middle;
}

.c3 {
  position: relative;
  padding: 0.75rem 1.25rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: #456297;
  font-size: 0.93333rem;
  overflow-x: hidden;
}

.c4 {
  table-layout: fixed;
  display: table;
  width: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  border-top: 1px solid #D8E3F6;
  min-height: 50px;
  overflow: hidden;
  vertical-align: middle;
  text-align: right;
  box-sizing: border-box;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: auto;
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  word-break: break-word;
  border-radius: 0.25rem;
  overflow: hidden;
  background-color: #ffffff;
  box-shadow: none;
  width: 300px;
  height: 220px;
  border: 1px solid #D8E3F6;
}

<div
  className="vital__card c0"
  height="220px"
  width="300px"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      Title
    </div>
  </div>
  <div
    className="vital__card-content c3"
  >
    Lorem ipsum dolor sit amet, sea oblique aliquam oportere ea, id dico interesset eam. Eu eum quem velit verterem, amet dicat quaeque ad est.
  </div>
  <div
    className="vital__card-footer c4"
  >
    <div
      className="c5"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <button
        className="vital__button c6"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Cancel
      </button>
      <button
        className="vital__button c7"
        onClick={[Function]}
        selected={false}
        size="medium"
      >
        Confirm
      </button>
    </div>
  </div>
</div>
`;
